2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST): Add tpic2pdftex and tpic2pdftex.1,
	for 'make dist' on Windows and MinGW.

2011-06-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tpic2pdftex: Fix a syntax error (typo).

2011-06-10  Karl Berry  <karl@tug.org>

	* tpic2pdftex: LANG=C; export LANG for non-bash.
	Report from Nelson, 9 Jun 2011 06:47:05.

2010-12-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Version 1.97 (as in tpic2pdftex).
	* Makefile.am, configure.ac: Ignore shell script for WIN32.

2010-01-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tpic2pdftex: Add missing '#' in comment line.

2009-12-24  Karl Berry  <karl@tug.org>

	* tpic2pdftex: use gawk for default awk only if it exists.
	* README: New.

2009-12-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tpic2pdftex.test: Ignore diffs in generated .tex files
	(due to floating point rounding?).
	Reported by Nikola Lecic <nikola.lecic@anthesphoria.net>.

2009-05-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Adapt to TL2009 build system and add a test case.
