@@ -1,7 +1,11 @@
 #! /bin/sh
 
-# Copyright (C) 2009 Peter Breitenlohner <tex-live@tug.org>
+# Copyright (C) 2009, 2013 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
+
+unset LANGUAGE
+unset LANG
+LC_ALL=C; export LC_ALL
 
 for f in beamerexample example; do
 	pic -z -t $srcdir/$f.pic >$f.tpic || exit 77
